<resources>
    <string name="app_name">Restaurant</string>
    <string name="profile_title">Профиль</string>
    <string name="menu_title">Меню</string>
    <string name="cart_title">Корзина</string>
    <string name="gram_weight">%1$d гр</string>
    <string name="rubles_price">%1$d ₽</string>
    <string name="dishes_count">%1$d шт.</string>
    <string name="orders_created">Совершено заказов</string>
    <string name="image_description_locations">Изображение - мои адреса</string>
    <string name="my_locations">Мои адреса</string>
    <string name="right_arrow_description">Стрелка вправо</string>
    <string name="settings">Настройки</string>
    <string name="image_descriptions_settings">Изображение - настройки</string>
    <string name="image_description_logout">Выход из аккаунта</string>
    <string name="logout">Выход</string>
    <string name="sms_code">Код из SMS</string>
    <string name="code">Код</string>
    <string name="next">Далее</string>
    <string name="input_your_phone_number">Введите свой номер телефона</string>
    <string name="phone">Телефон</string>
    <string name="do_order">Оформить заказ</string>
    <string name="orders">Заказы</string>
    <string name="edit">Редактировать</string>
    <string name="remove">Удалить</string>
    <string name="street">Улица</string>
    <string name="house">Дом</string>
    <string name="flat">Квартира</string>
    <string name="entrance">Подъезд</string>
    <string name="doorphone">Домофон</string>
    <string name="level">Этаж</string>
    <string name="comment">Комментарий</string>
    <string name="add_address">Добавить адрес</string>
    <string name="cart_is_empty">Корзина пуста</string>
    <string name="menu">Меню</string>
    <string name="cd_right_arrow">Стрелка вправо</string>
</resources>